# Gravity-Bridge

./: .dockerignore  .gitignore  .prettierrc
docs/developer/: environment-setup.md
module/: .gitignore  Makefile  go.mod  go.sum
module/app/: app.go
module/app/upgrades/: register.go
module/contrib/local/: protocgen.sh
module/proto/gravity/v1/: genesis.proto  msgs.proto  query.proto  types.proto
module/x/gravity/: abci.go  abci_test.go  cosmos-originated_test.go  handler_test.go  ibc_middleware.go  module.go
module/x/gravity/keeper/: attestation.go  attestation_handler.go  (+30 more)
orchestrator/: Cargo.toml
orchestrator/cosmos_gravity/src/: proposals.rs  query.rs  send.rs  utils.rs
orchestrator/cosmos_sdk_proto/src/prost/: cosmos.gov.v1beta1.rs
orchestrator/ethereum_gravity/src/: send_to_cosmos.rs
orchestrator/gbt/src/: args.rs  orchestrator.rs  relayer.rs
orchestrator/gbt/src/client/: cosmos_to_eth.rs  deploy_erc20_representation.rs  eth_to_cosmos.rs  spot_relay.rs
orchestrator/gbt/src/keys/: mod.rs
orchestrator/gravity_proto/: Cargo.toml
orchestrator/gravity_proto/src/: lib.rs
orchestrator/gravity_proto/src/prost/: auction.v1.rs  gravity.v1.rs
orchestrator/gravity_utils/src/types/: ethereum_events.rs  event_signatures.rs
orchestrator/orchestrator/src/: ethereum_event_watcher.rs  main_loop.rs  oracle_resync.rs
orchestrator/proto_build/: Cargo.toml
orchestrator/proto_build/src/: main.rs
orchestrator/relayer/src/: batch_relaying.rs  find_latest_valset.rs  ibc_auto_forwarding.rs  logic_call_relaying.rs  main_loop.rs  request_batches.rs  valset_relaying.rs
orchestrator/test_runner/: Cargo.toml
orchestrator/test_runner/src/: airdrop_proposal.rs  auction.rs  batch_timeout.rs  bootstrapping.rs  deposit_overflow.rs  ethereum_blacklist_test.rs  ethereum_keys.rs  happy_path.rs  happy_path_v2.rs  ibc_auto_forward.rs  ibc_auto_send_eth.rs  ibc_metadata.rs  invalid_events.rs  main.rs  pause_bridge.rs  relay_market.rs  send_to_eth_fees.rs  signature_slashing.rs  slashing_delegation.rs  transaction_stress_test.rs  tx_cancel.rs  unhalt_bridge.rs  upgrade.rs  utils.rs  valset_rewards.rs  vesting.rs
solidity/: .env.example  .eslintrc.js  .mocharc.json  contract-deployer.ts  hardhat.config.ts  package-lock.json  package.json
solidity/contracts/: Gravity.sol
solidity/scripts/: contract-deployer.sh  get-valset.ts  sample-script.js
solidity/test/: arbitrary-logic.ts  constructor.ts  deployERC20.ts  gas-test.ts  happy-path.ts  hashingTest.ts  sendERC721ToCosmos.ts  sendToCosmos.ts  submitBatch-vs-logicCall.ts  submitBatch.ts  submitERC721LogicCall.ts  updateValset.ts
solidity/test-utils/: deployERC721.ts  index.ts  pure.ts
tests/: build-container.sh  run-all-tests-no-reset.sh  run-all-tests.sh  start-chains.sh
tests/container-scripts/: integration-tests.sh  reload-code.sh  run-eth.sh  run-testnet.sh  setup-ibc-validators.sh  setup-validators.sh
tests/dockerfile/: Dockerfile
(+16 files in other folders)
