[package]
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
name = "test_runner"
version = "0.1.0"

# only because I like - more in names
[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
cosmos_gravity = {path = "../cosmos_gravity"}
ethereum_gravity = {path = "../ethereum_gravity"}
gravity_proto = {workspace = true}
gravity_utils = {path = "../gravity_utils"}
orchestrator = {path = "../orchestrator/"}

actix = "0.13"
actix-rt = "2.2"
bytes = "1"
clarity = {workspace = true}
deep_space = {workspace = true, features = ["ethermint"]}
docopt = "1"
env_logger = "0.10"
futures = "0.3"
hdpath = "0.6.3"
ibc-relayer = "0.26.0"
ibc-relayer-types = "0.26.0"
lazy_static = "1"
log = "0.4"
num = "0.4.0"
num256 = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
rand = "0.8"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "1.4.0"
tonic = {workspace = true}
url = "2"
web30 = {workspace = true}
